--- a/index.html
+++ b/index.html
@@ -1,13 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="/favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VSS-Task</title>
+</head>
+
+<body>
+  <div id="app">hello world</div>
+  <div class="start-animation"></div>
+  <script>
+    // 防抖函数
+    function debounce (fn, delay) {
+      let timer = null
+      return function () {
+        if (timer) {
+          clearTimeout(timer)
+        }
+        timer = setTimeout(() => {
+          fn.apply(this, arguments)
+        }, delay)
+      }
+    }
+
+    function startAnimation () {
+      const startAnimation = document.querySelector('.start-animation')
+      startAnimation.classList.add('active')
+      stopAnimation()
+    }
+    function stopAnimationO () {
+      const startAnimation = document.querySelector('.start-animation')
+      startAnimation.classList.remove('active')
+    }
+    var stopAnimation = debounce(stopAnimationO, 2000) 
+  </script>
+  <script type="module" src="/src/main.js"></script>
+  <style>
+    :root {
+      --current-color: #409eff;
+    }
+
+    .start-animation {
+      background-image: url("/DrawAknife.gif");
+      background-color: rgba(0, 0, 0, 0.551);
+      z-index: 9999;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      /* opacity: 0.8; */
+      display: none;
+    }
+
+    @keyframes active {
+      0% {
+        opacity: 1;
+      }
+
+      80% {
+        opacity: 1;
+      }
+
+      100% {
+        opacity: 0;
+        z-index: -99;
+      }
+    }
+
+    .active {
+      animation: active;
+      animation-duration: 1.2s;
+      animation-fill-mode: forwards;
+      animation-iteration-count: 1;
+      display: block;
+    }
+  </style>
+</body>
+
 </html>
