--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <script>
   function clearSettings () {
-    localStorage.setItem("settings",'{"nodePackageTools":"pnpm"}')
+    localStorage.setItem("settings", '{"nodePackageTools":"pnpm"}')
   }
   function clearLProject () {
     localStorage.setItem("project", "[]")
@@ -21,9 +21,12 @@
 
 <body>
   <div id="app">
-    <button onclick="clearSettings()">清理设置缓存</button>
-    <button onclick="clearLProject()">清理项目缓存</button>
-    <button onclick="openDev()">打开调试台</button>
+    <div class="error-help">
+      <h3>Vss-Task</h3>
+      <button onclick="clearSettings()">清理设置缓存</button>
+      <button onclick="clearLProject()">清理项目缓存</button>
+      <button onclick="openDev()">打开调试台</button>
+    </div>
   </div>
   <div class="start-animation"></div>
   <script>
@@ -56,7 +59,7 @@
     var stopAnimation = debounce(stopAnimationO, 2000) 
   </script>
   <script type="module" src="/src/main.js"></script>
-  <script src="https://at.alicdn.com/t/c/font_4134002_zf8o4l0x1f9.js"></script>
+  <script src="https://at.alicdn.com/t/c/font_4134002_agz9ttayk2v.js"></script>
   <style type="text/css">
     :root {
       --current-color: #409eff;
@@ -102,14 +105,11 @@
       display: block;
     }
 
-    .icon {
-      width: 1em;
-      height: 1em;
-      vertical-align: -0.15em;
-      fill: currentColor;
-      overflow: hidden;
-    }
   </style>
 </body>
-
+<style>
+  .error-help{
+    padding-left:24px;
+  }
+</style>
 </html>
