--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     var stopAnimation = debounce(stopAnimationO, 2000) 
   </script>
   <script type="module" src="/src/main.js"></script>
-  <script src="https://at.alicdn.com/t/c/font_4134002_agz9ttayk2v.js"></script>
+  <script src="https://at.alicdn.com/t/c/font_4134002_raw09x9n4mn.js"></script>
   <style type="text/css">
     :root {
       --current-color: #409eff;
@@ -105,11 +105,26 @@
       display: block;
     }
 
+    :root {
+      --el-color-primary: #6c63ff;
+      /* 将主题颜色设置为紫色 */
+      --el-color-primary-light-1: #171e66 !important;
+      --el-color-primary-light-2: #22278c !important;
+      --el-color-primary-light-3: #3436b3 !important;
+      --el-color-primary-light-4: #4c4ad9 !important;
+      --el-color-primary-light-5: #6c63ff !important;
+      --el-color-primary-light-6: #968cff !important;
+      --el-color-primary-light-7: #beb5ff !important;
+      --el-color-primary-light-8: #e3deff !important;
+      --el-color-primary-light-9: #f3f0ff !important;
+      --el-color-primary-light-10: #f3f0ff !important;
+    }
   </style>
 </body>
 <style>
-  .error-help{
-    padding-left:24px;
+  .error-help {
+    padding-left: 24px;
   }
 </style>
+
 </html>
