feat;react 正常运行

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     }
     var stopAnimation = debounce(stopAnimationO, 2000) 
   </script>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/main.jsx"></script>
   <script src="https://at.alicdn.com/t/c/font_4134002_raw09x9n4mn.js"></script>
   <style type="text/css">
     :root {
